--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,88 +2,126 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-	:root {
-		--background: 0 0% 100%;
-		--foreground: 20 14.3% 4.1%;
-
-		--muted: 60 4.8% 95.9%;
-		--muted-foreground: 25 5.3% 44.7%;
-
-		--popover: 0 0% 100%;
-		--popover-foreground: 20 14.3% 4.1%;
-
-		--card: 60 5% 96%;
-		--card-foreground: 20 14.3% 4.1%;
-
-		--border: 20 5.9% 90%;
-		--input: 20 5.9% 90%;
-
-		--primary: 337 100% 28%;
-		--primary-foreground: 60 9.1% 97.8%;
-
-		--secondary: 60 4.8% 95.9%;
-		--secondary-foreground: 24 9.8% 10%;
-
-		--accent: 60 4.8% 95.9%;
-		--accent-foreground: 24 9.8% 10%;
-
-		--destructive: 0 72.2% 50.6%;
-		--destructive-foreground: 60 9.1% 97.8%;
-
-		--ring: 20 14.3% 4.1%;
-
-		--radius: 0.5rem;
-
-		/* Argasso extra */
-		--header-height: 3.5rem;
-	}
-
-	.dark {
-		--background: 222 47% 11%;
-		--foreground: 213 27% 84%;
-
-		--muted: 12 6.5% 15.1%;
-		--muted-foreground: 24 5.4% 63.9%;
-
-		--popover: 20 14.3% 4.1%;
-		--popover-foreground: 60 9.1% 97.8%;
-
-		--card: 217 33% 17%;
-		--card-foreground: 215 20% 65%;
-
-		--border: 12 6.5% 15.1%;
-		--input: 12 6.5% 15.1%;
-
-		--primary: 337 100% 28%;
-		--primary-foreground: 60 9.1% 97.8%;
-
-		--secondary: 12 6.5% 15.1%;
-		--secondary-foreground: 60 9.1% 97.8%;
-
-		--accent: 12 6.5% 15.1%;
-		--accent-foreground: 60 9.1% 97.8%;
-
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 60 9.1% 97.8%;
-
-		--ring: 24 5.7% 82.9%;
-	}
+.root,
+#root,
+#docs-root {
+  --tw-ring-color: #00ff00;
+  --tw-ring-offset-color: 3px;
 }
 
 @layer base {
-	* {
-		@apply border-border;
-	}
-	body {
-		@apply bg-background text-foreground;
-	}
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 20 14.3% 4.1%;
+
+    --muted: 60 4.8% 95.9%;
+    --muted-foreground: 25 5.3% 44.7%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 20 14.3% 4.1%;
+
+    --card: 60 5% 96%;
+    --card-foreground: 20 14.3% 4.1%;
+
+    --border: 20 5.9% 90%;
+    --input: 20 5.9% 90%;
+
+    --primary: 337 100% 28%;
+    --primary-foreground: 60 9.1% 97.8%;
+
+    --secondary: 60 4.8% 95.9%;
+    --secondary-foreground: 24 9.8% 10%;
+
+    --accent: 60 4.8% 95.9%;
+    --accent-foreground: 24 9.8% 10%;
+
+    --destructive: 0 72.2% 50.6%;
+    --destructive-foreground: 60 9.1% 97.8%;
+
+    --ring: 20 14.3% 4.1%;
+    --ring: 224 76% 48%;
+
+    --radius: 0.5rem;
+
+    /* Argasso extra */
+    --tw-ring-offset-width: 2px;
+    --header-height: 3.5rem;
+  }
+
+  .dark {
+    --background: 222 47% 11%;
+    --foreground: 213 27% 84%;
+
+    --muted: 12 6.5% 15.1%;
+    --muted-foreground: 24 5.4% 63.9%;
+
+    --popover: 217 33% 17%;
+    --popover-foreground: 60 9.1% 97.8%;
+
+    --card: 217 33% 17%;
+    --card-foreground: 215 20% 65%;
+
+    --border: 215 25% 27%;
+    --input: 217 33% 17%;
+
+    --primary: 337 100% 28%;
+    --primary-foreground: 60 9.1% 97.8%;
+
+    --secondary: 12 6.5% 15.1%;
+    --secondary-foreground: 60 9.1% 97.8%;
+
+    --accent: 215 25% 27%;
+    --accent-foreground: 215 20% 65%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 60 9.1% 97.8%;
+
+    --ring: 24 5.7% 82.9%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+  /*
+  :focus {
+    outline: 1px dotted #212121;
+    outline: 5px auto -webkit-focus-ring-color;
+  }
+	*/
 }
 
 .gradient {
-	background-image: linear-gradient(90deg, #660028 0%, #9e003e 100%);
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+  background-image: linear-gradient(90deg, #660028 0%, #9e003e 100%);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Ribbon https://css-generators.com/ribbon-shapes/ */
+.ribbon {
+  --ribbon-radius: 0.4em; /* control the ribbon shape (the radius) */
+  --ribbon-color: #888;
+
+  margin-right: calc(-1 * var(--ribbon-radius));
+  line-height: 1.8;
+  padding: calc(2 * var(--ribbon-radius)) 1em 0.1em;
+  border-radius: 0 var(--ribbon-radius) var(--ribbon-radius) 0;
+  background:
+    radial-gradient(100% 50% at right, var(--ribbon-color) 98%, #0000 101%) 0 100%/0.5lh
+      calc(100% - 2 * var(--ribbon-radius)),
+    radial-gradient(100% 50% at left, #0005 98%, #0000 101%) 100% 0 / var(--ribbon-radius)
+      calc(2 * var(--ribbon-radius)),
+    conic-gradient(
+        at calc(100% - var(--ribbon-radius)) calc(2 * var(--ribbon-radius)),
+        var(--ribbon-color) 75%,
+        #0000 0
+      )
+      100% 0 / calc(101% - 0.5lh) 100%;
+  background-repeat: no-repeat;
 }
