--- a/src/app.pcss
+++ b/src/app.pcss
@@ -95,6 +95,31 @@
 	*/
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply font-serif leading-tight;
+}
+
+h1 {
+  @apply mb-3 mt-8 text-5xl;
+}
+
+h2 {
+  @apply mb-2 mt-6 text-3xl;
+}
+
+h3 {
+  @apply mb-1 mt-3 text-2xl;
+}
+
+h4 {
+  @apply mt-3 text-xl;
+}
+
 .gradient {
   background-image: linear-gradient(90deg, #660028 0%, #9e003e 100%);
   background-attachment: fixed;
